added new models

--- a/Missed-Questions/review.ipynb
+++ b/Missed-Questions/review.ipynb
@@ -24,6 +24,33 @@
     "\n",
     "- The option that says Use Amazon Kinesis Data Firehose to ingest the location data. Load the streaming data into the cluster using Amazon Redshift Streaming ingestion is incorrect. Amazon Kinesis Data Firehose is not a valid streaming source for Amazon Redshift Streaming ingestion."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question\n",
+    "### A Data Scientist has been asked to create a pipeline for training machine learning models. The data will be collected from different IoT devices and needs to be read and processed by a custom record-processing application. How can the Data Scientist process the data with the least amount of development effort?\n",
+    "\n",
+    "- Use Amazon Kinesis Data Streams to ingest the incoming data. Read and process the data using the Amazon Kinesis Client Library (KCL).\n",
+    "- Use Amazon DynamoDB Streams to ingest the incoming data and create an AWS Lambda function to read the data.\n",
+    "- Use Amazon Kinesis Data Streams to ingest the incoming data. Read and process the data using the Amazon Kinesis Producer Library (KPL).\n",
+    "- Use Amazon Kinesis Data Streams to ingest the incoming data. Read and process the data using the Amazon Kinesis Data Streams APIs.\n",
+    "\n",
+    "### Answer:  Use Amazon Kinesis Data Streams to ingest the incoming data. Read and process the data using the Amazon Kinesis Client Library (KCL)\n",
+    "\n",
+    "### KCL helps you consume and process data from a Kinesis data stream by taking care of many of the complex tasks associated with distributed computing. These include load balancing across multiple consumer application instances, responding to consumer application instance failures, checkpointing processed records, and reacting to resharding. The KCL takes care of all of these subtasks so that you can focus your efforts on writing your custom record-processing logic.\n",
+    "\n",
+    "### The KCL is different from the Kinesis Data Streams APIs that are available in the AWS SDKs. The Kinesis Data Streams APIs help you manage many aspects of Kinesis Data Streams, including creating streams, resharding, and putting and getting records. The KCL provides a layer of abstraction around all these subtasks, specifically so that you can focus on your consumer application’s custom data processing logic.\n",
+    "\n",
+    "### Incorrect Answer:\n",
+    "- The option that says: Use Amazon Kinesis Data Streams to ingest the incoming data. Read and process the data using the Amazon Kinesis Producer Library (KPL) is incorrect because Amazon KPL is only used for streaming data into Amazon Kinesis Data Streams and not for reading data from it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
