added new kinsesis notes

--- a/AWS/Exam-Notes/cheat-sheet.ipynb
+++ b/AWS/Exam-Notes/cheat-sheet.ipynb
@@ -121,6 +121,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Kinses Client Library\n",
+    "\n",
+    "- Consumes and process data from a kinseis data stream\n",
+    "- Does many of the complex tasks associated with distributed computing\n",
+    "\n",
+    "## Kinses Producer Library\n",
+    "\n",
+    "- Feeds the data into a Kinesis Data stream\n",
+    "- Uses PutRecords to write multiple records to multiple shards per request"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Kinses Shards\n",
     "\n",
     "- Shard is the base throughput unit of an Amazon Kinesis data stream. One shard provides a capacity of 1 MB/sec data input and 2 MB/sec data output. One shard can support up to 1000 PUT records per second. You will specify the number of shards needed when you create a data stream."
