added new kinsesis notes

--- a/Data-Science-Perspective/Algorithms/Alogirthms.ipynb
+++ b/Data-Science-Perspective/Algorithms/Alogirthms.ipynb
@@ -90,6 +90,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Factorization Machines\n",
+    "\n",
+    "### A factorization machine is a general-purpose supervised learning algorithm that you can use for both classification and regression tasks. It is an extension of a linear model that is designed to capture interactions between features within high dimensional sparse datasets economically."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
