added new notes

--- a/Missed-Questions/review.ipynb
+++ b/Missed-Questions/review.ipynb
@@ -50,6 +50,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Question\n",
+    "\n",
+    "### A Machine Learning Specialist will be running a distributed training job involving a cluster of GPU-based SageMaker instances. Due to strict regulatory compliance, the Specialist must also secure the communication between the instances. How can the Specialist comply with the requirement?\n",
+    "\n",
+    "- Create an AWS KMS key and supply its ARN to the resource configuration at the training job creation.\n",
+    "- Create an SSL/TLS certificate using Amazon Certificate Manager to secure the traffic between instances.\n",
+    "- Select a VPC at the training job creation, then enable inter-container traffic encryption.\n",
+    "- Have each SageMaker instance connect through a VPC Interface Endpoint to secure traffic.\n",
+    "\n",
+    "### Correct Answer: Select a VPC at the training job creation, then enable inter-container traffic encryption.\n",
+    "\n",
+    "### When performing distributed training, you can further protect data that is transmitted between instances. This can help you to comply with regulatory requirements. To do this, use inter-container traffic encryption."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
