added new models

--- a/Missed-Questions/review.ipynb
+++ b/Missed-Questions/review.ipynb
@@ -68,6 +68,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Question\n",
+    "\n",
+    "### A company has just created an Amazon S3 data lake for its existing and future training data. The Machine Learning Specialist at this company wants to design an automated solution that will handle all transformation jobs while keeping a catalog of metadata associated with the training dataset. The Specialist is looking for a solution that involves the least amount of effort to set up and maintain. Which solution should the Specialist do?\n",
+    "\n",
+    "- Launch a transient EMR cluster and install Apache Spark. Schedule a Spark job to run data transformations and use AWS Glue Data Catalog for storing metadata.\n",
+    "- Launch a transient EMR cluster and install Apache Hive. Use a Hive metastore for storing metadata and write a scheduled transformation job in a script.\n",
+    "- Use AWS Data Pipeline to automate data transformation jobs and use AWS Glue Data Catalog for storing metadata.\n",
+    "- Use the AWS Glue Data Catalog to store metadata and create a custom AWS Glue ETL job to run data transformation jobs.\n",
+    "\n",
+    "### Correct Answer: Use the AWS Glue Data Catalog to store metadata and create a custom AWS Glue ETL job to run data transformation jobs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
