added new notes

--- a/Mathematics/Linear-Algebra/vectors.ipynb
+++ b/Mathematics/Linear-Algebra/vectors.ipynb
@@ -66,6 +66,60 @@
     "\n",
     "proj_u_v, orth_u_v"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Custom norm of vector (5-dimensional): 3.5692169574087207\n",
+      "NumPy norm of vector (5-dimensional): 3.5692169574087207\n",
+      "Custom norm of vector (10-dimensional): 2.2330589116369346\n",
+      "NumPy norm of vector (10-dimensional): 2.2330589116369346\n",
+      "Custom norm of vector (15-dimensional): 4.823769201651546\n",
+      "NumPy norm of vector (15-dimensional): 4.823769201651546\n",
+      "Custom norm of vector (20-dimensional): 4.830458216740707\n",
+      "NumPy norm of vector (20-dimensional): 4.830458216740707\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "def compute_norm(v):\n",
+    "  \n",
+    "  squared_values = v**2\n",
+    "  sum_squares = np.sum(squared_values)\n",
+    "  norm = np.sqrt(sum_squares)\n",
+    "  return norm\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "vectors = [np.random.randn(n) for n in [5,10,15,20]]\n",
+    "\n",
+    "for vec in vectors:\n",
+    "  custom_norm = compute_norm(vec)\n",
+    "  numpy_norm = np.linalg.norm(vec)\n",
+    "  print(f\"Custom norm of vector ({len(vec)}-dimensional): {custom_norm}\")\n",
+    "  print(f\"NumPy norm of vector ({len(vec)}-dimensional): {numpy_norm}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -84,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.undefined"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
