--- a/Mathematics/Linear-Algebra/vectors.ipynb
+++ b/Mathematics/Linear-Algebra/vectors.ipynb
@@ -115,6 +115,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.37139068 0.55708601 0.74278135]\n",
+      "0 Vector cannot normalize\n"
+     ]
+    }
+   ],
+   "source": [
+    "def to_unit_vector(v):\n",
+    "  \n",
+    "  norm = np.linalg.norm(v)\n",
+    "  if norm == 0.0:\n",
+    "    print(\"0 Vector cannot normalize\")\n",
+    "    return v\n",
+    "  print(v/norm)\n",
+    "\n",
+    "v1, v2 = np.array([2,3,4]), np.array([0,0,0])\n",
+    "\n",
+    "unit_v1 = to_unit_vector(v1)\n",
+    "unit_v2 = to_unit_vector(v2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2.4\n",
+    "\n",
+    "#### You know how to create unit vectors; what if you want to create a vector of any arbitrary magnitude? Write a Python function that will take a vector and a desired magnitude as inputs and will return a vector in the same direction but with a magnitude corresponding to the second input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Vector: [3 4]\n",
+      "Scaled Vector: [6. 8.]\n",
+      "Magnitude of Scaled Vector: 10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def scale_vector(v, magnitude):\n",
+    "  \n",
+    "  norm = np.linalg.norm(v)\n",
+    "  \n",
+    "  if norm == 0:\n",
+    "    raise ValueError(\"Zero vector cannot be scaled to a non-zero magnitude\")\n",
+    "  \n",
+    "  unit_vector = v/norm\n",
+    "  scaled_vector = unit_vector * magnitude\n",
+    "  return scaled_vector\n",
+    "\n",
+    "v = np.array([3,4])\n",
+    "magnitude = 10\n",
+    "\n",
+    "scaled_v = scale_vector(v, magnitude)\n",
+    "print(\"Original Vector:\", v)\n",
+    "print(\"Scaled Vector:\", scaled_v)\n",
+    "print(\"Magnitude of Scaled Vector:\", np.linalg.norm(scaled_v))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2-5.\n",
+    "#### Write a for loop to transpose a row vector into a column vector without using a built-in function or method such as np.transpose() or v.T. This exercise will help you create and index orientation-endowed vectors."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
