added new models

--- a/Mathematics/Linear-Algebra/vectors.ipynb
+++ b/Mathematics/Linear-Algebra/vectors.ipynb
@@ -205,6 +205,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]]\n",
+      "Row Vector:\n",
+      "[1 2 3 4 5]\n",
+      "Transposed Vector\n",
+      "[[1.]\n",
+      " [2.]\n",
+      " [3.]\n",
+      " [4.]\n",
+      " [5.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def transpose_vector(v):\n",
+    "  \n",
+    "  if v.ndim != 1:\n",
+    "    raise ValueError('Input must be an 1d row vector.')\n",
+    "  \n",
+    "  n = len(v)\n",
+    "  col_vector = np.zeros((n, 1))\n",
+    "  print(col_vector)\n",
+    "  \n",
+    "  for i in range(n):\n",
+    "    col_vector[i, 0] = v[i]\n",
+    "  \n",
+    "  return col_vector\n",
+    "\n",
+    "row_vetor = np.array([1,2,3,4,5])\n",
+    "column_vector = transpose_vector(row_vetor)\n",
+    "\n",
+    "print('Row Vector:')\n",
+    "print(row_vetor)\n",
+    "\n",
+    "print(\"Transposed Vector\")\n",
+    "print(column_vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
