added new example

--- a/Mathematics/Linear-Algebra/vectors.ipynb
+++ b/Mathematics/Linear-Algebra/vectors.ipynb
@@ -254,10 +254,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Exercise 2-6.\n",
+    "#### Here is an interesting fact: you can compute the squared norm of a vector as the dot product of that vector with itself."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
