added new notes

--- a/Mathematics/Linear-Algebra/vectors.ipynb
+++ b/Mathematics/Linear-Algebra/vectors.ipynb
@@ -262,8 +262,38 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vector: [3 4]\n",
+      "Squared Norm of the vector: 25\n",
+      "Normalized Vector: 25.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def squared_norm(v):\n",
+    "  \n",
+    "  return np.dot(v,v)\n",
+    "\n",
+    "vector = np.array([3,4])\n",
+    "sq_norm = squared_norm(v)\n",
+    "norm = np.linalg.norm(vector) **2\n",
+    "print(\"Vector:\", vector)\n",
+    "print(\"Squared Norm of the vector:\", sq_norm)\n",
+    "print(\"Normalized Vector:\", norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
