added new notes

--- a/Mathematics/Linear-Algebra/vectors.ipynb
+++ b/Mathematics/Linear-Algebra/vectors.ipynb
@@ -258,7 +258,9 @@
    "metadata": {},
    "source": [
     "## Exercise 2-6.\n",
-    "#### Here is an interesting fact: you can compute the squared norm of a vector as the dot product of that vector with itself."
+    "#### Here is an interesting fact: you can compute the squared norm of a vector as the dot product of that vector with itself.\n",
+    "\n",
+    "##### Calculating the squared norm using the dot product is often preferred in computational applications where the magnitude of a vector is compared or optimized, as it avoids the computational expense of taking a square root (as would be necessary for finding the actual norm). This technique is used in algorithms involving distances, optimizations, and similarity measures in machine learning, physics simulations, and more."
    ]
   },
   {
@@ -286,7 +288,7 @@
     "norm = np.linalg.norm(vector) **2\n",
     "print(\"Vector:\", vector)\n",
     "print(\"Squared Norm of the vector:\", sq_norm)\n",
-    "print(\"Normalized Vector:\", norm)"
+    "print(\"Normalized Vector:\", norm)\n"
    ]
   },
   {
