--- a/Mathematics/Linear-Algebra/vectors.ipynb
+++ b/Mathematics/Linear-Algebra/vectors.ipynb
@@ -292,6 +292,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2-7.\n",
+    "\n",
+    "#### Write code to demonstrate that the dot product is commutative."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one: 45, two: 45\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_communtativity(a,b):\n",
+    "  \n",
+    "  one = np.dot(a, b)\n",
+    "  two = np.dot(b,a)\n",
+    "  print(f\"one: {one}, two: {two}\")\n",
+    "  return one == two\n",
+    "\n",
+    "a = np.array([2,3,4])\n",
+    "b = np.array([1,5,7])\n",
+    "\n",
+    "print(check_communtativity(a,b))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
