added new models;

--- a/Mathematics/Linear-Algebra/vectors.ipynb
+++ b/Mathematics/Linear-Algebra/vectors.ipynb
@@ -329,6 +329,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2-9.\n",
+    "#### Implement orthogonal vector decomposition. Start with two random-number vectors"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
