added new notes

--- a/Mathematics/Linear-Algebra/vectors.ipynb
+++ b/Mathematics/Linear-Algebra/vectors.ipynb
@@ -295,15 +295,57 @@
    "metadata": {},
    "source": [
     "## Exercise 2-9.\n",
-    "#### Implement orthogonal vector decomposition. Start with two random-number vectors"
+    "\n",
+    "#### Implement orthogonal vector decomposition. Start with two random-number vectors\n",
+    "\n",
+    "#### Projection of a onto b\n",
+    "- The component of vector a that points in the direction of vector b.  It represents how much of a is aligned with b\n",
+    "\n",
+    "#### Orthogonal Component of a relative to b:\n",
+    "- The part of vector a that is perpendicular to vector b. It represents the aspect of a that is not aliged with b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vector a: [1.76405235 0.40015721 0.97873798]\n",
+      "Vector b: [ 2.2408932   1.86755799 -0.97727788]\n",
+      "Projection of a onto b: [ 2.2408932   1.86755799 -0.97727788]\n",
+      "Orthogonal component of a to b: [-0.47684085 -1.46740078  1.95601586]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def orthogonal_decomposition(a,b):\n",
+    "  \n",
+    "  dot_a, dot_b = np.dot(a, b), np.dot(b,a)\n",
+    "  \n",
+    "  if dot_b == 0:\n",
+    "    raise ValueError(\"Vector b cannot be the zero vector\")\n",
+    "  \n",
+    "  proj_b_a = (dot_a/ dot_b) * b\n",
+    "  \n",
+    "  comp_b_a = a- proj_b_a\n",
+    "  \n",
+    "  return proj_b_a, comp_b_a\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "a = np.random.randn(3)\n",
+    "b = np.random.randn(3)\n",
+    "\n",
+    "proj_b_a, comp_b_a = orthogonal_decomposition(a,b)\n",
+    "\n",
+    "print(\"Vector a:\", a)\n",
+    "print(\"Vector b:\", b)\n",
+    "print(\"Projection of a onto b:\", proj_b_a)\n",
+    "print(\"Orthogonal component of a to b:\", comp_b_a)"
+   ]
   }
  ],
  "metadata": {
