added new notes

--- a/Mathematics/Linear-Algebra/vector-part-2.ipynb
+++ b/Mathematics/Linear-Algebra/vector-part-2.ipynb
@@ -24,10 +24,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### That is, for some (finite) set of vectors, the infinite number of ways to linearly combine them—​using the same vectors but different numerical values for the weights—​creates a vector subspace. And the mechanism of combining all possible linear weighted combinations is called the span of the vector set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
