added new notes

--- a/Mathematics/Linear-Algebra/vector-part-2.ipynb
+++ b/Mathematics/Linear-Algebra/vector-part-2.ipynb
@@ -33,6 +33,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### The formal definition of a vector subspace is a subset that is closed under addition and scalar multiplication, and includes the origin of the space. That means that any linear weighted combination of vectors in the subspace must also be in the same subspace, including setting all weights to zero to produce the zeros vector at the origin of the space."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
