added new models

--- a/Mathematics/Linear-Algebra/vector-part-2.ipynb
+++ b/Mathematics/Linear-Algebra/vector-part-2.ipynb
@@ -40,6 +40,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### I find that thinking of span as a verb and subspace as a noun helps understand their distinction: a set of vectors spans, and the result of their spanning is a subspace. Now consider that a subspace can be a smaller portion of a larger space. Putting these together: span is the mechanism of creating a subspace. (On the other hand, when you use span as a noun, then span and subspace refer to the same infinite vector set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
