added new models

--- a/Mathematics/Linear-Algebra/vector-part-2.ipynb
+++ b/Mathematics/Linear-Algebra/vector-part-2.ipynb
@@ -47,6 +47,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Exercise 3-1.\n",
+    "### Rewrite the code for linear weighted combination, but put the scalars in a list and the vectors as elements in a list (thus, you will have two lists, one of scalars and one of NumPy arrays). Then use a for loop to implement the linear weighted combination operation. Initialize the output vector using np.zeros(). Confirm that you get the same result as in the previous code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
