added new example notes

--- a/Mathematics/Linear-Algebra/vector-part-2.ipynb
+++ b/Mathematics/Linear-Algebra/vector-part-2.ipynb
@@ -53,8 +53,46 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Scaler: 2, Vector: [1 2 3]\n",
+      "Output Vector: [2 4 6]\n",
+      " Scaler: 3, Vector: [4 5 6]\n",
+      "Output Vector: [14 19 24]\n",
+      " Scaler: -1, Vector: [7 8 9]\n",
+      "Output Vector: [ 7 11 15]\n",
+      "The resulting linear weighted combination is: [ 7 11 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "scalers = [2, 3,-1]\n",
+    "\n",
+    "vectors = [np.array([1,2,3]), np.array([4,5,6]), np.array([7,8,9])]\n",
+    "\n",
+    "output_vector = np.zeros_like(vectors[0])\n",
+    "\n",
+    "for scaler, vector in zip(scalers, vectors):\n",
+    "  print(f\" Scaler: {scaler}, Vector: {vector}\")\n",
+    "  output_vector += scaler * vector\n",
+    "  print(f\"Output Vector: {output_vector}\")\n",
+    "\n",
+    "print(\"The resulting linear weighted combination is:\", output_vector)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -65,8 +103,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.-1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
