added new notes

--- a/Mathematics/Linear-Algebra/Vector-Applications.ipynb
+++ b/Mathematics/Linear-Algebra/Vector-Applications.ipynb
@@ -10,6 +10,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Correlation\n",
+    "\n",
+    "#### Correlation is one of the most fundamental and important analysis methods in statistics and machine learning. A correlation coefficient is a single number that quantifies the linear relationship between two variables. Correlation coefficients range from −1 to +1, with −1 indicating a perfect negative relationship, +1 a perfect positive relationships, and 0 indicating no linear relationship. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mean center each variable\n",
+    "#### Mean centering means to subtract the average value from each data value.\n",
+    "\n",
+    "## Divide the dot product by the product of the vector norms\n",
+    "\n",
+    "#### This divisive normalization cancels the measurement units and scales the maximum possible correlation magnitude to |1|."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
