added new notes

--- a/Mathematics/Linear-Algebra/Vector-Applications.ipynb
+++ b/Mathematics/Linear-Algebra/Vector-Applications.ipynb
@@ -31,6 +31,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Cosine Similarity\n",
+    "#### Correlation is not the only way to assess similarity between two variables. Another method is called cosine similarity. The formula for cosine similarity is simply the geometric formula for the dot product.\n",
+    "\n",
+    "- a / ||x|| ||y||\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
