added new notes

--- a/Mathematics/Linear-Algebra/Vector-Applications.ipynb
+++ b/Mathematics/Linear-Algebra/Vector-Applications.ipynb
@@ -42,6 +42,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## k-Means Clustering\n",
+    "#### k-means clustering is an unsupervised method of classifying multivariate data into a relatively small number of groups, or categories, based on minimizing distance to the group center."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
