added new mdoels

--- a/Mathematics/Linear-Algebra/Vector-Applications.ipynb
+++ b/Mathematics/Linear-Algebra/Vector-Applications.ipynb
@@ -35,7 +35,7 @@
     "## Cosine Similarity\n",
     "#### Correlation is not the only way to assess similarity between two variables. Another method is called cosine similarity. The formula for cosine similarity is simply the geometric formula for the dot product.\n",
     "\n",
-    "- a / ||x|| ||y||\n",
+    "- dot(X, y) / ||x|| ||y||\n",
     "\n"
    ]
   },
@@ -50,7 +50,55 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Exercise 4-1.\n",
+    "#### Write a Python function that takes two vectors as input and provides two numbers as output: the Pearson correlation coefficient and the cosine similarity value. Write code that follows the formulas presented in this chapter; don’t simply call np.corrcoef and spatial.distance.cosine. Check that the two output values are identical when the variables are already mean centered and different when the variables are not mean centered.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pearson Correlation Coefficient: -1.0\n",
+      "Cosine Similarity: 0.6363636363636364\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def pearson_cosine(x,y):\n",
+    "  \n",
+    "  mean_x, mean_y = np.mean(x), np.mean(y)\n",
+    "  \n",
+    "  centered_x = x- mean_x\n",
+    "  centered_y = y - mean_y\n",
+    "  \n",
+    "  numerator = np.sum(centered_x * centered_y)\n",
+    "  denominator = np.sqrt(np.sum(centered_x**2) * np.sum(centered_y**2))\n",
+    "  pearson_correlation = numerator / denominator\n",
+    "  \n",
+    "  dot_product = np.dot(x, y)\n",
+    "  mag_x, mag_y = np.linalg.norm(x), np.linalg.norm(y)\n",
+    "  \n",
+    "  cosine_similarity = dot_product/ (mag_x * mag_y)\n",
+    "  \n",
+    "  return pearson_correlation, cosine_similarity\n",
+    "\n",
+    "x = np.array([1,2,3,4,5])\n",
+    "y = np.array([5,4,3,2,1])\n",
+    "\n",
+    "pearson, cosine = pearson_cosine(x,y)\n",
+    "\n",
+    "print(f\"Pearson Correlation Coefficient: {pearson}\")\n",
+    "print(f\"Cosine Similarity: {cosine}\")"
+   ]
   }
  ],
  "metadata": {
@@ -60,8 +108,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.-1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
