added new models

--- a/Mathematics/Linear-Algebra/Vector-Applications.ipynb
+++ b/Mathematics/Linear-Algebra/Vector-Applications.ipynb
@@ -101,6 +101,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4.2\n",
+    "\n",
+    "#### Let’s continue exploring the difference between correlation and cosine similarity. Create a variable containing the integers 0 through 3, and a second variable equaling the first variable plus some offset. You will then create a simulation in which you systematically vary that offset between −50 and +50 (that is, the first iteration of the simulation will have the second variable equal to [−50, −49, −48, −47]). In a for loop, compute the correlation and cosine similarity between the two variables and store these results. Then make a line plot showing how the correlation and cosine similarity are affected by the mean offset. You should be able to reproduce Figure 4-4."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -167,6 +176,11 @@
     "\n",
     "#### The purpose of varying the mean offset and observing the effects on Pearson correlation and cosine similarity is to demonstrate that while Pearson correlation is unaffected by changes in the mean (it remains constant because it measures the strength and direction of a linear relationship relative to the means of the datasets), cosine similarity changes because it is sensitive to the actual values and their magnitude (which affects the angle between the two vectors)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
