added new models

--- a/Mathematics/Linear-Algebra/Vector-Applications.ipynb
+++ b/Mathematics/Linear-Algebra/Vector-Applications.ipynb
@@ -231,6 +231,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## k-Means Exercises\n",
+    "\n",
+    "## Exercise 4-8.\n",
+    "\n",
+    "#### One way to determine an optimal k is to repeat the clustering multiple times (each time using randomly initialized cluster centroids) and assess whether the final clustering is the same or different. Without generating new data, rerun the k-means code several times using k = 3 to see whether the resulting clusters are similar (this is a qualitative assessment based on visual inspection). Do the final cluster assignments generally seem similar even though the centroids are randomly selected?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
