--- a/Mathematics/Linear-Algebra/Matrices.ipynb
+++ b/Mathematics/Linear-Algebra/Matrices.ipynb
@@ -10,6 +10,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 5.1\n",
+    "\n",
+    "#### This exercise will help you gain familiarity with indexing matrix elements. Create a \n",
+    "matrix using np.arange(12).reshape(3,4). Then write Python code to extract the element in the second row, fourth column. Use softcoding so that you can select different row/column indices. Print out a message like the following:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
