added new notes

--- a/Mathematics/Linear-Algebra/Matrices.ipynb
+++ b/Mathematics/Linear-Algebra/Matrices.ipynb
@@ -73,6 +73,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Column Space (Range):\n",
+    "\n",
+    "#### The column space of a matrix is the set of all possible linear combinations of its column vectors. It represents all the vectors that can be obtained by applying the matrix to some vector x. Essentially, it's the space spanned by the columns of the matrix.\n",
+    "\n",
+    "## Row Space:\n",
+    "\n",
+    "#### The row space of a matrix is the set of all possible linear combinations of its row vectors. Like the column space but for rows, it represents all vectors that can be written as a linear combination of the rows of the matrix. The row space spans a subspace in the space where each dimension corresponds to a column of the matrix.\n",
+    "\n",
+    "## Null Space (Kernel):\n",
+    "\n",
+    "#### The null space of a matrix consists of all vectors x that satisfy the equation Ax=0, where A is the matrix and 0 is the zero vector. This space includes all solutions to the homogeneous system and represents directions in which the matrix reduces vectors to zero."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
