added new notes

--- a/Mathematics/Linear-Algebra/Matrices.ipynb
+++ b/Mathematics/Linear-Algebra/Matrices.ipynb
@@ -99,9 +99,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The rank of the matrix A is: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([[1, 2],\n",
+    "              [3, 6]])\n",
+    "rank = np.linalg.matrix_rank(A)\n",
+    "\n",
+    "print(\"The rank of the matrix A is:\", rank)"
+   ]
   }
  ],
  "metadata": {
