added new mdoels

--- a/Mathematics/Linear-Algebra/Matrices.ipynb
+++ b/Mathematics/Linear-Algebra/Matrices.ipynb
@@ -120,6 +120,20 @@
     "\n",
     "print(\"The rank of the matrix A is:\", rank)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Determinant\n",
+    "\n",
+    "#### The two most important properties of the determinant—​and the two most important take-home messages of this section—​are (1) it is defined only for square matrices and (2) it is zero for singular (reduced-rank) matrices."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
