added new changes

--- a/Mathematics/Linear-Algebra/Matrices.ipynb
+++ b/Mathematics/Linear-Algebra/Matrices.ipynb
@@ -127,7 +127,18 @@
    "source": [
     "## Determinant\n",
     "\n",
-    "#### The two most important properties of the determinant—​and the two most important take-home messages of this section—​are (1) it is defined only for square matrices and (2) it is zero for singular (reduced-rank) matrices."
+    "#### The two most important properties of the determinant—​and the two most important take-home messages of this section—​are (1) it is defined only for square matrices and (2) it is zero for singular (reduced-rank) matrices.\n",
+    "\n",
+    "#### The second take-home message about determinants is that they are zero for any reduced-rank matrix. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Characteristic Polynomial\n",
+    "\n",
+    "#### The characteristic polynomial is, to use a technical term, super awesome. For one thing, it provides the remarkable insight that every square matrix can be expressed as an equation. And not just any equation—​an equation that directly links matrices to the fundamental theorem of algebra."
    ]
   },
   {
