added new models

--- a/Mathematics/Linear-Algebra/Matrices.ipynb
+++ b/Mathematics/Linear-Algebra/Matrices.ipynb
@@ -201,10 +201,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final scalar: 0.34867844010000015\n",
+      "Number of iterations: 10\n",
+      "Frobenius distance: 0.9198968305030815\n"
+     ]
+    }
+   ],
+   "source": [
+    "def frobenius_distance(A, B):\n",
+    "    \"\"\"Compute the Frobenius distance between two matrices.\"\"\"\n",
+    "    return np.linalg.norm(A - B, 'fro')\n",
+    "\n",
+    "N = 7\n",
+    "\n",
+    "A = np.random.rand(N, N)\n",
+    "B = np.random.rand(N, N)\n",
+    "\n",
+    "s = 1.0\n",
+    "iterations =0\n",
+    "\n",
+    "while True:\n",
+    "  scaled_A = s * A\n",
+    "  scaled_B = s * B\n",
+    "  \n",
+    "  distance = frobenius_distance(scaled_A, scaled_B)\n",
+    "  \n",
+    "  if distance <1:\n",
+    "    break\n",
+    "  \n",
+    "  s *= 0.9\n",
+    "  iterations +=1\n",
+    "\n",
+    "print(f\"Final scalar: {s}\")\n",
+    "print(f\"Number of iterations: {iterations}\")\n",
+    "print(f\"Frobenius distance: {distance}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 6-3.\n",
+    "#### Demonstrate that the trace method and the Euclidean formula produce the same result (the Frobenius norm). Does the trace formula work only for A^TA or AA^T , or do you get the same result?"
+   ]
   }
  ],
  "metadata": {
