added new models

--- a/Mathematics/Linear-Algebra/Matrices.ipynb
+++ b/Mathematics/Linear-Algebra/Matrices.ipynb
@@ -251,6 +251,38 @@
     "## Exercise 6-3.\n",
     "#### Demonstrate that the trace method and the Euclidean formula produce the same result (the Frobenius norm). Does the trace formula work only for A^TA or AA^T , or do you get the same result?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Norm from the Euclidean formula: 2.4590072582959586\n",
+      "Norm from the trace method: 2.4590072582959586\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.random.rand(5, 4)\n",
+    "\n",
+    "norm_fro_euclidean = np.sqrt(np.sum(A**2))\n",
+    "\n",
+    "norm_fro_trace = np.sqrt(np.trace(A.T @ A))\n",
+    "\n",
+    "print(f\"Norm from the Euclidean formula: {norm_fro_euclidean}\")\n",
+    "print(f\"Norm from the trace method: {norm_fro_trace}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
