added new notes

--- a/Mathematics/Linear-Algebra/Matrix-Applications.ipynb
+++ b/Mathematics/Linear-Algebra/Matrix-Applications.ipynb
@@ -47,6 +47,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 7-1.\n",
+    "#### In this exercise, you will transform the covariance matrix into a correlation matrix. The procedure involves dividing each matrix element (that is, the covariance between each pair of variables) by the product of the variances of those two variables.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
